--- a/Toggl.Daneel/ViewControllers/Login.storyboard
+++ b/Toggl.Daneel/ViewControllers/Login.storyboard
@@ -155,6 +155,24 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next" textContentType="email"/>
                                     </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iDB-Xo-SZQ" userLabel="PasswordMaskingControl" customClass="UIControl">
+                                        <rect key="frame" x="319" y="82" width="40" height="56"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icPasswordUnmasked" translatesAutoresizingMaskIntoConstraints="NO" id="40g-vt-OaG">
+                                                <rect key="frame" x="10.5" y="20" width="19" height="16"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="16" id="3N8-6h-7hh"/>
+                                                    <constraint firstAttribute="width" constant="19" id="Er6-O9-Xgy"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="Kow-L6-r0t"/>
+                                            <constraint firstItem="40g-vt-OaG" firstAttribute="centerY" secondItem="iDB-Xo-SZQ" secondAttribute="centerY" id="cPn-vo-yRy"/>
+                                            <constraint firstItem="40g-vt-OaG" firstAttribute="centerX" secondItem="iDB-Xo-SZQ" secondAttribute="centerX" id="om6-PI-8ML"/>
+                                        </constraints>
+                                    </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Incorrect email/password. Please try again." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uyS-pK-50z">
                                         <rect key="frame" x="16" y="144" width="243.5" height="15"/>
                                         <constraints>
@@ -229,12 +247,15 @@
                                 <color key="backgroundColor" red="0.98039215690000003" green="0.98431372549999996" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="t53-NP-5k0" firstAttribute="top" secondItem="cN3-2j-ihW" secondAttribute="bottom" constant="26" id="5iG-NS-BnN"/>
+                                    <constraint firstItem="iDB-Xo-SZQ" firstAttribute="centerY" secondItem="t53-NP-5k0" secondAttribute="centerY" id="9Wp-sF-JTh"/>
                                     <constraint firstItem="t53-NP-5k0" firstAttribute="leading" secondItem="cN3-2j-ihW" secondAttribute="leading" id="GqB-jj-c54"/>
                                     <constraint firstItem="M81-7Q-VfX" firstAttribute="top" secondItem="uyS-pK-50z" secondAttribute="bottom" constant="60" id="H9V-A4-1i0"/>
                                     <constraint firstAttribute="trailing" secondItem="cN3-2j-ihW" secondAttribute="trailing" constant="16" id="Lpa-gf-8vy"/>
                                     <constraint firstItem="cN3-2j-ihW" firstAttribute="leading" secondItem="LGF-xC-VLz" secondAttribute="leading" constant="16" id="NoA-6H-FlV"/>
                                     <constraint firstItem="t53-NP-5k0" firstAttribute="trailing" secondItem="cN3-2j-ihW" secondAttribute="trailing" id="aVC-61-KmC"/>
                                     <constraint firstItem="uyS-pK-50z" firstAttribute="top" secondItem="t53-NP-5k0" secondAttribute="bottom" constant="6" id="cTC-DI-kEW"/>
+                                    <constraint firstItem="iDB-Xo-SZQ" firstAttribute="height" secondItem="t53-NP-5k0" secondAttribute="height" id="fld-Pb-lWA"/>
+                                    <constraint firstItem="iDB-Xo-SZQ" firstAttribute="trailing" secondItem="t53-NP-5k0" secondAttribute="trailing" id="j6r-zl-4kV"/>
                                     <constraint firstItem="M81-7Q-VfX" firstAttribute="trailing" secondItem="t53-NP-5k0" secondAttribute="trailing" id="p6V-l4-Eij"/>
                                     <constraint firstItem="uyS-pK-50z" firstAttribute="leading" secondItem="cN3-2j-ihW" secondAttribute="leading" id="r7p-Ss-i6N"/>
                                     <constraint firstItem="cN3-2j-ihW" firstAttribute="top" secondItem="LGF-xC-VLz" secondAttribute="top" id="tFY-JC-gc6"/>
@@ -264,6 +285,8 @@
                         <outlet property="LoginWithEmailButton" destination="8e6-Gh-xye" id="Hfh-nZ-XxS"/>
                         <outlet property="LoginWithEmailErrorLabel" destination="mES-7Q-qsS" id="08k-fE-XU2"/>
                         <outlet property="LoginWithEmailTextField" destination="Lsa-g7-i4M" id="PYB-BR-2YK"/>
+                        <outlet property="PasswordMaskingControl" destination="iDB-Xo-SZQ" id="JWI-Ma-TeJ"/>
+                        <outlet property="PasswordMaskingImageView" destination="40g-vt-OaG" id="3jQ-ha-h2r"/>
                         <outlet property="PasswordTextField" destination="t53-NP-5k0" id="8tP-M6-CDq"/>
                         <outlet property="SecondScreenEmailTextField" destination="cN3-2j-ihW" id="pcr-vx-Z7h"/>
                         <outlet property="SecondScreenErrorLabel" destination="uyS-pK-50z" id="7Uu-DO-a48"/>
@@ -278,5 +301,6 @@
     <resources>
         <image name="icAdd" width="10" height="10"/>
         <image name="icGoogleColored" width="18" height="18"/>
+        <image name="icPasswordUnmasked" width="512" height="384"/>
     </resources>
 </document>
